[05] Solve